<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurfaceVariant"
    android:fitsSystemWindows="true"
    tools:context=".DownloadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:foregroundGravity="top"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:src="@drawable/ic_launcher_monochrome" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:background="@drawable/oval_color_accent_thin"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="?colorPrimary"
                    android:textSize="22sp"
                    android:text="@string/download_model" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="?colorPrimary"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/download_model_text" />
                <CheckBox
                    android:id="@+id/option32bit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="32bit (~63MB)"
                    android:textColor="?colorPrimary"/>

                <ImageButton
                    android:id="@+id/download_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="?colorPrimary"
                    android:src="@drawable/ic_download_48dp"
                    android:tint="@android:color/white"
                    android:padding="12dp"
                    android:contentDescription="@string/download_the_model"
                    android:onClick="download"
                    />

                <ProgressBar
                    android:id="@+id/download_progress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:visibility="gone"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:progressDrawable="@drawable/progress_track"
                    tools:progress="0" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>